--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,14 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+/target/
+
+.classpath
+
+.project
+
+.settings/org.eclipse.jdt.core.prefs
+
+.settings/org.eclipse.m2e.core.prefs
+
+src/main/java/glpoo/esiea/peulze/Game/Game.java
