--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,238 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+         xmlns="http://maven.apache.org/POM/4.0.0"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>glpoo.esiea.peulze</groupId>
     <artifactId>Peulze</artifactId>
     <version>1.0-SNAPSHOT</version>
+    <name>Peulze</name>
+    <description>Jeu de type Eternety</description>
+
+    <developers>
+        <developer>
+            <name>Christophe Domergue</name>
+            <roles>
+                <role>Etudiant</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Franck Bastide</name>
+            <roles>
+                <role>Etudiant</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Adrien Maudonnet</name>
+            <roles>
+                <role>Etudiant</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Mathieu Jacquier</name>
+            <roles>
+                <role>Etudiant</role>
+            </roles>
+        </developer>
+        <developer>
+            <name>Thomas Montardier</name>
+            <roles>
+                <role>Etudiant</role>
+            </roles>
+        </developer>
+    </developers>
+
+    <properties>
+
+        <!-- Construction du projet -->
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <java.version>1.7</java.version>
+        <maven-compiler-plugin.version>2.3.1</maven-compiler-plugin.version>
+
+        <!-- Lib de test -->
+        <junit.version>4.8.2</junit.version>
+        <unitils-dbunit.version>3.3</unitils-dbunit.version>
+
+        <!-- DB -->
+        <mysql-connector-java.version>5.1.18</mysql-connector-java.version>
+        <hsqldb.version>2.2.8</hsqldb.version>
+
+        <!-- Lib de log -->
+        <log4j.version>1.2.13</log4j.version>
+
+        <!-- Lib CSV -->
+        <opencsv.version>2.3</opencsv.version>
+        <csvengine.version>1.3.5</csvengine.version>
+
+        <!-- Libs pour les rapports -->
+        <maven-site-plugin.version>3.0-beta-3</maven-site-plugin.version>
+        <maven-javadoc-plugin.version>2.8</maven-javadoc-plugin.version>
+        <maven-jxr-plugin.version>2.3</maven-jxr-plugin.version>
+        <taglist-maven-plugin.version>2.4</taglist-maven-plugin.version>
+        <maven-surefire-plugin.version>2.9</maven-surefire-plugin.version>
+        <maven-surefire-report-plugin>2.9</maven-surefire-report-plugin>
+
+
+    </properties>
+
 
     <dependencies>
+        <!-- Junit -->
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>4.8.1</version>
+            <version>${junit.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- log4j -->
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>${log4j.version}</version>
+        </dependency>
+
+        <!-- Lib CSV -->
+        <dependency>
+            <groupId>net.sf.opencsv</groupId>
+            <artifactId>opencsv</artifactId>
+            <version>${opencsv.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>fr.ybonnel</groupId>
+            <artifactId>csvengine</artifactId>
+            <version>${csvengine.version}</version>
+        </dependency>
+
+        <!-- Ci dessous des lib dont vous aurez besoin pour aller plus loin. -->
+
+        <!-- MySql et HSQLDB -->
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql-connector-java.version}</version>
+            <scope>compile</scope>
+        </dependency>
+
+        <dependency>
+            <groupId>org.hsqldb</groupId>
+            <artifactId>hsqldb</artifactId>
+            <version>${hsqldb.version}</version>
+            <scope>test</scope>
+        </dependency>
+
+        <!-- Unitils (avec DBUnit) -->
+        <dependency>
+            <groupId>org.unitils</groupId>
+            <artifactId>unitils-dbunit</artifactId>
+            <version>${unitils-dbunit.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
 
+    <build>
+        <finalName>Peulze</finalName>
+
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${maven-compiler-plugin.version}</version>
+                <configuration>
+                    <source>${java.version}</source>
+                    <target>${java.version}</target>
+                    <encoding>${project.build.sourceEncoding}</encoding>
+                </configuration>
+            </plugin>
+
+            <!-- Doc generee par Maven -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-site-plugin</artifactId>
+                <version>${maven-site-plugin.version}</version>
+            </plugin>
+
+            <!-- Surefire (rapport de test) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>${maven-surefire-plugin.version}</version>
+            </plugin>
+        </plugins>
+    </build>
+
+
+    <reporting>
+        <plugins>
+            <!-- Javadoc -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-javadoc-plugin</artifactId>
+                <version>${maven-javadoc-plugin.version}</version>
+            </plugin>
+
+            <!-- JXR : pour lier les sources -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-jxr-plugin</artifactId>
+                <version>${maven-jxr-plugin.version}</version>
+            </plugin>
+
+            <!-- Taglist : pour voir les TODO restant dans le code -->
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>taglist-maven-plugin</artifactId>
+                <version>${taglist-maven-plugin.version}</version>
+                <configuration>
+                    <tagListOptions>
+                        <tagClasses>
+                            <tagClass>
+                                <displayName>Todo Work</displayName>
+                                <tags>
+                                    <tag>
+                                        <matchString>TODO</matchString>
+                                        <matchType>ignoreCase</matchType>
+                                    </tag>
+                                    <tag>
+                                        <matchString>FIXME</matchString>
+                                        <matchType>exact</matchType>
+                                    </tag>
+                                </tags>
+                            </tagClass>
+                            <tagClass>
+                                <displayName>Regles</displayName>
+                                <tags>
+                                    <tag>
+                                        <matchString>REGLE</matchString>
+                                        <matchType>ignoreCase</matchType>
+                                    </tag>
+                                </tags>
+                            </tagClass>
+                        </tagClasses>
+                    </tagListOptions>
+                </configuration>
+            </plugin>
+
+            <!-- Surefire (tests JUnit) -->
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>${maven-surefire-report-plugin}</version>
+            </plugin>
+        </plugins>
+    </reporting>
+
+
+    <repositories>
+        <repository>
+            <id>ybonnel-release</id>
+            <url>https://repository-ybonnel.forge.cloudbees.com/release/</url>
+        </repository>
+        <repository>
+            <id>ybonnel-snapshot</id>
+            <url>https://repository-ybonnel.forge.cloudbees.com/snapshot/</url>
+        </repository>
+    </repositories>
 
 </project>
