--- a/pom.xml
+++ b/pom.xml
@@ -148,36 +148,43 @@
 
     <build>
         <finalName>Peulze</finalName>
-        <resources>
-            <resource>
-                <directory>src/main/ressources</directory>
-                <filtering>false</filtering>
-            </resource>
-        </resources>
+
         <plugins>
             <plugin>
-                <artifactId>maven-assembly-plugin</artifactId>
-                <configuration>
-                    <descriptorRefs>
-                        <descriptorRef>jar-with-dependencies</descriptorRef>
-                    </descriptorRefs>
-                </configuration>
-            </plugin>
-            <plugin>
                 <artifactId>maven-compiler-plugin</artifactId>
-                <version>${maven-compiler-plugin.version}</version>
                 <configuration>
-                    <source>${java.version}</source>
-                    <target>${java.version}</target>
-                    <encoding>${project.build.sourceEncoding}</encoding>
+                    <source>1.7</source>
+                    <target>1.7</target>
                 </configuration>
             </plugin>
-
-            <!-- Doc generee par Maven -->
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-site-plugin</artifactId>
-                <version>${maven-site-plugin.version}</version>
+                <artifactId>maven-jar-plugin</artifactId>
+                <configuration>
+                    <!-- nom du fichier jar -->
+                    <finalName>Peulze</finalName>
+                    <archive>
+                        <manifest>
+                            <!-- classe contenant le main -->
+                            <mainClass>glpoo.esiea.peulze.game.TheGame</mainClass>
+                            <!-- ajouter les dépendances préfixées de /lib -->
+                            <addClasspath>true</addClasspath>
+                            <classpathPrefix>lib/</classpathPrefix>
+                        </manifest>
+                    </archive>
+                    <!-- n'inclure que le code compilé -->
+                    <includes>
+                        <include>**/*.class</include>
+                    </includes>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
             </plugin>
 
             <!-- Surefire (rapport de test) -->
@@ -205,6 +212,17 @@
                         </configuration>
                     </execution>
                 </executions>
+            </plugin>
+
+            <plugin>
+                <artifactId>maven-assembly-plugin</artifactId>
+                <version>2.4</version>
+                <configuration>
+                    <descriptors>
+                        <descriptor>distribution.xml</descriptor>
+                    </descriptors>
+                    <appendAssemblyId>false</appendAssemblyId>
+                </configuration>
             </plugin>
         </plugins>
     </build>
